--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^11.4.1",
     "@react-navigation/native": "^5.9.4",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-google-app-auth": "^8.1.7",
+    "expo-google-sign-in": "~9.1.0",
     "expo-status-bar": "1.0.4",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
